Ensure gunicorn is installed

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
 flask
+gunicorn
 PyPDF2
 pdf2docx
 python-docx
 docx2pdf
+Pillow
 pandas
-openpyxl
-pillow
-reportlab
 pdfplumber
-
-
-
+reportlab
