--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask
-gunicorn
-PyPDF2
-python-docx
-Pillow
-reportlab
-pdf2docx==0.5.6
-docx2pdf
+Flask==3.0.0
+Werkzeug==3.0.1
+PyPDF2==3.0.1
+python-docx==1.1.0
+reportlab==4.0.9
+Pillow==10.2.0
+pdfminer.six==20231228
+gunicorn==21.2.0
