--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+pip>=25.3
+setuptools>=75.0.0
+wheel>=0.44.0
+
 Flask==3.0.0
 Werkzeug==3.0.1
 PyPDF2==3.0.1
 python-docx==1.1.0
 reportlab==4.0.9
 Pillow==10.2.0
-pdfminer.six==20231228
+pdfminer.six==20221105
 gunicorn==21.2.0
