--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,27 @@
+# Core Framework
 Flask==3.0.0
 Werkzeug==3.0.1
+gunicorn==21.2.0
+
+# PDF Processing
 PyPDF2==3.0.1
+pdfminer.six==20231228
+pikepdf==8.12.0
+
+# Document Processing
 python-docx==1.1.0
 reportlab==4.0.9
+
+# Image Processing
 Pillow==10.2.0
-pdfminer.six==20231228
-gunicorn==21.2.0
+opencv-python-headless==4.9.0.80
+numpy==1.26.3
+
+# OCR Processing
+pytesseract==0.3.10
+pdf2image==1.16.3
+
+# Utilities
+python-magic==0.4.27
+cachetools==5.3.2
+click==8.1.7
