--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ reportlab==4.0.9
 
 # Image Processing
 Pillow==10.2.0
+opencv-python-headless==4.9.0.80  # ADD THIS BACK
 numpy==1.26.3
 
 # OCR Processing
