--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,38 @@
 # Core Framework
 Flask==3.0.0
 Werkzeug==3.0.1
-gunicorn==21.2.0
 
 # PDF Processing
 PyPDF2==3.0.1
-pdfminer.six==20231228
-pikepdf==8.12.0
+reportlab==4.0.4
+pdfminer.six==20221105
 
 # Document Processing
 python-docx==1.1.0
-reportlab==4.0.9
 
 # Image Processing
-Pillow==10.2.0
-opencv-python-headless==4.9.0.80  # ADD THIS BACK
-numpy==1.26.3
+Pillow==10.1.0
+numpy==1.24.3
 
-# OCR Processing
+# OCR Dependencies (Optional)
 pytesseract==0.3.10
 pdf2image==1.16.3
 
 # Utilities
-cachetools==5.3.2
-click==8.1.7
+python-magic==0.4.27
+python-magic-bin==0.4.14; platform_system == "Windows"
+
+# Performance
+gunicorn==21.2.0
+gevent==23.9.1
+
+# Security
+bcrypt==4.1.2
+cryptography==41.0.7
+
+# Monitoring
+psutil==5.9.6
+prometheus-client==0.19.0
+
+# Development (optional)
+blinker==1.7.0
