--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,28 @@ Werkzeug==3.0.1
 gunicorn==21.2.0
 
 # PDF Processing
-PyPDF2==3.0.1
-pdfminer.six==20231228
-pikepdf==8.12.0
+pypdf==4.1.0  # Replaces PyPDF2 - more reliable and maintained
+reportlab==4.0.9  # For PDF generation
 
 # Document Processing
 python-docx==1.1.0
-reportlab==4.0.9
+openpyxl==3.1.2  # For better Excel support if needed
 
 # Image Processing
 Pillow==10.2.0
 numpy==1.26.3
 
-# OCR Processing
+# OCR Processing (OPTIONAL - only if you need OCR)
 pytesseract==0.3.10
 pdf2image==1.16.3
+pytesseract==0.3.10
+
+# System dependencies for OCR (need to be installed separately):
+# - Tesseract OCR (system package)
+# - Poppler (for pdf2image)
 
 # Utilities
 cachetools==5.3.2
 click==8.1.7
+Jinja2==3.1.3
+blinker==1.7.0
