--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,21 @@
 # Core Framework
-Flask==3.0.0
-Werkzeug==3.0.1
-gunicorn==21.2.0
+Flask==2.3.3
+Werkzeug==2.3.7
 
 # PDF Processing
-pypdf==4.1.0  # Replaces PyPDF2 - more reliable and maintained
-reportlab==4.0.9  # For PDF generation
+PyPDF2==3.0.1
+reportlab==4.0.4
 
 # Document Processing
 python-docx==1.1.0
-openpyxl==3.1.2  # For better Excel support if needed
 
 # Image Processing
-Pillow==10.2.0
-numpy==1.26.3
+Pillow==10.1.0
 
-# OCR Processing (OPTIONAL - only if you need OCR)
+# OCR Processing
 pytesseract==0.3.10
 pdf2image==1.16.3
-pytesseract==0.3.10
-
-# System dependencies for OCR (need to be installed separately):
-# - Tesseract OCR (system package)
-# - Poppler (for pdf2image)
 
 # Utilities
-cachetools==5.3.2
-click==8.1.7
 Jinja2==3.1.3
-blinker==1.7.0
+click==8.1.7
