--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-Flask==3.0.0
-Werkzeug==3.0.1
+# Python 3.12 compatible versions
+numpy==2.4.2
+opencv-python-headless==4.8.1.78
+flask==3.0.0
+werkzeug==3.0.1
 PyPDF2==3.0.1
 python-docx==1.1.0
 reportlab==4.0.9
 Pillow==10.2.0
 pdfminer.six==20231228
-gunicorn==21.2.0
 pytesseract==0.3.10
 pdf2image==1.17.0
-opencv-python-headless==4.8.1.78  # For better image processing
-numpy==1.24.3  # Required by opencv
+gunicorn==21.2.0
